completed as per figma

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
-  background-repeat: no-repeat,no-repeat;
-  background-size: 200%,200%;
-  background-position: right calc(47vw + 7%) bottom calc(65vh - 15vw), left calc(40vw + -3%) top calc(72vh - 40vw);
   background-color: #19a2ae;
   color: #969696;
   font-family: 'Kumbh Sans',sans-serif;
@@ -44,6 +40,19 @@ body {
 }
 
 .main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  max-width: 37.5rem;
+  height: 100vh;
+  background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat,no-repeat;
+  background-size: 622px,622px;
+  background-position: -400px -370px, 180px 350px;
+}
+
+.container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,5 +143,20 @@ body {
   margin-top: 0.9rem;
   line-height: 1rem;
   letter-spacing: 1.5px;
+}
+
+@media screen and (min-width: 840px) {
+  .main {
+    width: 100%;
+    max-width: 144rem;
+    height: 100vh;
+    background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
+    background-repeat: no-repeat, no-repeat;
+    background-size: 978px, 978px;
+    background-position: -300px -500px, 700px 388px;
+  }
+  .container {
+    width: 35rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
